fix error message display shifting

--- a/frontend/react/src/scss/_form.scss
+++ b/frontend/react/src/scss/_form.scss
@@ -4,10 +4,13 @@
 .errors,
 .error {
   color: #e31c3d;
+  position: absolute;
+  top: -24px;
 }
 
 .ds-c-label {
   max-width: 100%;
+  position: relative;
 }
 
 .ds-l-col fieldset .ds-c-label {
